--- a/.gitignore
+++ b/.gitignore
@@ -135,4 +135,10 @@ share/
 *.sqlite3
 
 # Lock files (usually keep package-lock.json, but ignore others if needed)
+
+# Terraform
+.terraform/
+*.tfstate
+*.tfstate.backup
+.terraform.lock.hcl
 # package-lock.json is kept, but if you have yarn.lock or others, decide accordingly
